Setting up gh-pages package

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "name": "startbootstrap-resume",
     "version": "7.0.5",
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist",
         "build": "npm run clean && npm run build:pug && npm run build:scss && npm run build:scripts && npm run build:assets",
         "build:assets": "node scripts/build-assets.js",
         "build:pug": "node scripts/build-pug.js",
@@ -21,7 +23,7 @@
         "theme",
         "template"
     ],
-    "homepage": "https://startbootstrap.com/theme/resume",
+    "homepage": "https://victoralexander132.github.io/bootstrap-resume/",
     "bugs": {
         "url": "https://github.com/StartBootstrap/startbootstrap-resume/issues",
         "email": "feedback@startbootstrap.com"
@@ -43,6 +45,7 @@
         "browser-sync": "2.27.9",
         "chokidar": "3.5.3",
         "concurrently": "6.3.0",
+        "gh-pages": "^5.0.0",
         "postcss": "8.4.12",
         "prettier": "2.6.0",
         "pug": "3.0.2",
